# nesmotri

./: .gitignore  README.md  app.py  config.yaml  go.mod  go.sum  main.go  pyproject.toml  secrept_imap.py  station.db  wsgi.ini
addiction/entities/: appEntity.go
addiction/handlers/: appHandler.go  appResponse.go
addiction/migrations/: appMigrate.go
addiction/models/: appModel.go
addiction/repositories/: appPhones.go
addiction/usecases/: appUsecase.go
config/: config.go
database/: database.go  postgres.go
server/: echoServer.go  server.go
www/: index.html
